# open-supaplex

./: .gitattributes  .gitignore  BUILD.BAT  DATA.INC  ENUMS.INC  GLOBALS.INC  LICENSE  Makefile  PLATFORM_SUPPORT.md  README.md  SEGMENTS.INC  SPFIX.ASM  SPFIX63U.ASM  SUPAPLEX.ASM  SUPAPLEX.i64  UTILS.ASM  VARS.INC  build.bat  controller.c  controller.h  supaplex.c
.github/: platform-builds.json  platform-builds.schema.json
.github/actions/: build-release.yml
.github/workflows/: build-beta-release.yml  build-nightly.yml  build-platform.yml  build-production-release.yml  build-release.yml  build-switch.yml  ci.yml  run-tests.yml
3ds/: INSTALL.TXT  Makefile  ci-build-3ds.sh  ci-build-new-3ds.sh  ci-build-old-3ds.sh  ci-build.sh  ci-docker-run.sh  ci-install-dependencies.sh
3ds/assets/: template.rsf
OpenSupaplex/OpenSupaplex.xcodeproj/: project.pbxproj
OpenSupaplex/OpenSupaplex.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SupaplexRE/SupaplexRE.xcodeproj/: project.pbxproj
SupaplexRE/SupaplexRE.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
asm/: BUILD.BAT  DATA.INC  LICENSE  SEGMENTS.INC  SUPAPLEX.ASM  TEST.BAT  UTILS.ASM
changelog/: next.txt  v7.0.txt  v7.1.1.txt  v7.1.2.txt  v7.1.txt  v7.2.1.txt  v7.2.2.txt  v7.2.txt
ci/: Dockerfile-3ds  Dockerfile-3ds-7.1-1  Dockerfile-nds  Dockerfile-ps2  Dockerfile-ps3  Dockerfile-ps3-7.2-1  Dockerfile-riscos  Dockerfile-switch  Dockerfile-switch-7.1-1  Dockerfile-vita  Dockerfile-vita-7.2-1  Dockerfile-wii  Dockerfile-wii-7.2-1  Dockerfile-wiiu  Dockerfile-wiiu-7.2-1
linux/: Makefile  Makefile.tests  ci-build.sh  ci-prepare.sh
linux/assets/: io.github.sergiou87.open-supaplex.desktop  io.github.sergiou87.open-supaplex.metainfo.xml
macos/: ci-build.sh  ci-prepare.sh
macos/OpenSupaplex/: macOS-Info.plist  macOS-sandboxed-Info.plist
macos/OpenSupaplex/OpenSupaplex/: Info.plist
macos/OpenSupaplex/OpenSupaplex.xcodeproj/: project.pbxproj
nds/: Makefile  ci-build.sh  ci-docker-run.sh
ps2/: Makefile  OpenSupaplex-debug.elf  ci-build.sh  ci-docker-run.sh  ci-prepare.sh
ps3/: Makefile  ci-build.sh  ci-docker-run.sh
ps3/assets/: PIC1.xcf  SND0.AT3  sfo.xml
psp/: Makefile  ci-build.sh  ci-docker-run.sh  ci-install-dependencies.sh
psp/assets/: PIC1.xcf  SND0.AT3
resources/: LEVEL.L01  LEVEL.L02  LEVEL.L03  LEVEL.L04  LEVEL.L05  LEVEL.L06  LEVEL.L07  LEVEL.L08  LEVEL.L09  LEVEL.L10  LEVEL.L11  LEVEL.L12  LEVEL.L24  LEVEL.L27  LEVEL.L32  LEVEL.L35  LEVEL.L36  LEVEL.L77  LEVEL.L78  LEVEL.L79  LEVEL.L92  LEVEL.L93  LEVEL.L94  LEVEL.L95  LEVEL.L97  LEVEL.L98  LEVEL.LST  LEVELS.D01  LEVELS.D02  LEVELS.D03  LEVELS.D04  LEVELS.D05  LEVELS.D06  LEVELS.D07  LEVELS.D08  LEVELS.D09  LEVELS.D10  LEVELS.D11  LEVELS.D12  LEVELS.D24  (+45 more)
resources/audio/: music-adlib.xm  music-beep.xm  music-roland.xm
resources/audio-hq/: music-beep.xm  music-blaster.xm  music-roland.xm
resources/audio-lq/: music-beep.xm  music-blaster.xm
resources/audio-mq/: music-beep.xm  music-roland.xm
riscos/: Makefile  ci-build.sh  ci-docker-run.sh
riscos/!OSupaplex/: !Run,feb  !Sprites,ff9
scripts/: extract-blaster-samples.sh  extract-pcspeaker-samples.sh  generate_platform_support.py  validate-level-files.sh
src/: animations.c  animations.h  audio.c  audio.h  buttonBorders.c  buttonBorders.h  commandLineParser.c  commandLineParser.h  conditionals.c  conditionals.h  config.c  config.h  controller.c  controller.h  demo.c  demo.h  file.c  file.h  globals.c  globals.h  graphics.c  graphics.h  input.c  input.h  keyboard.c  keyboard.h  logging.c  logging.h  menu.c  menu.h  nullVirtualKeyboard.c  pak.c  pak.h  platform.c  platform.h  platformCapabilities.h  savegame.c  savegame.h  supaplex.c  system.c  (+9 more)
src/3ds/: virtualKeyboard.c
src/apple/: file.m
src/lib/ini/: ini.c
src/nds/: maxmod.c
src/null/: audio.c  video.c  virtualKeyboard.c
src/nx/: nxVirtualKeyboard.c
src/ps3/: virtualKeyboard.c
src/psp/: video.c
src/psp2/: psp2VirtualKeyboard.c
src/sdl1/: audio.c  controller.c  keyboard.c  logging.c  system.c  touchscreen.c  video.c
src/sdl2/: audio.c  controller.c  keyboard.c  logging.c  system.c  touchscreen.c  video.c
src/sdl_common/: audio.c  system.c
src/wiiu/: virtualKeyboard.c
switch/: Makefile  ci-build-switch.sh  ci-docker-run.sh  ci-install-dependencies.sh  ci-install-devkitpro.sh
switch/resources/: appstore-info.json
tasm/: README
tests/: Makefile  README.md  ci-build.sh  ci-prepare.sh  run-tests.rb
tests/failures/05/: 05s025-1.sp
tests/failures/1/: JENS0076.SP
tests/failures/demos/: +++Small_023_my-best.sp  +++Small_023_the-rest-of-your-best.sp  +Trick02.sp  +Trick06(2).sp  +Trick09.sp  +Trick10.sp  +Trick11.sp  +Trick12.sp  +Trick14.sp  +Trick15.sp  +Trick18.sp  002 Easy one.sp  002 Planet Infotron.sp  002_Be_Strongest!.sp  002_Be_Strongest!LastColumn.sp  004 Labyrinth.sp  006 untitled.sp  008 Run for life  (updated).sp  00s----0.sp  012 Brand way out.sp  013 untitled.sp  015 Raceway 1.sp  017.Small_demo_supplement.sp  023 untitled.sp  024 Explosion!.sp  038.SIM_Mirek(1).sp  042a-failed-kc.sp  042a_constrattempt.sp  107best.sp  11s008-0.sp  2-frame1.sp  2-frame157.sp  2.sp  23.MSz.BEST.sp  32s017-kc.sp  32s085-kc.sp  33s041_zonks.sp  4701-simple-levels-simple092.sp  4704-martin-moritas-levels-mn04-sol-kc.sp  4705-martin-moritas-levels-mn05-sol-kc.sp  (+94 more)
tests/failures/solve09/: 09s024.sp  09s039.SP
tests/failures/solve27/: 27s093--.SP  27s107--.SP
tests/failures/solve92/: 92s052-1.sp
tests/failures/solve98/: 98S012-1.SP
tests/solves/00/: 00s001-b.sp  00s001-j.sp  00s001-k.sp  00s002-b.sp  00s002-f.sp  00s002-g.sp  00s003-g.sp  00s003-h.sp  00s003-i.sp  00s004-5.sp  00s004-6.sp  (+301 more)
vita/: CMakeLists.txt  ci-build-vita.sh  ci-docker-run.sh  ci-install-vitasdk.sh
vita/appstore/: description.txt
wasm/: Makefile
wii/: Makefile  ci-build.sh  ci-docker-run.sh
wii/assets/: meta.xml
wiiu/: Makefile  ci-build.sh  ci-docker-run.sh
wiiu/assets/: meta.xml
windows/: Makefile  Makefile.sdl1  OpenSupaplex.rc  ci-build-x64.sh  ci-build.sh  ci-prepare-x64.sh  ci-prepare.sh
(+8522 files in other folders)
